--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Deven Yantis
 
 # Short bio or description (displayed in the header)
-description: Love playing sports. Enjoy discovering AI
+description: Love sports. Enjoy ML
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/49480914?s=400&u=14d102b5545be30b4723c3a139bd9e8f90ed2e95&v=4
