--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ _site
 .jekyll-metadata
 .bundle
 .sass-cache
+Gemfile.lock
 node_modules
 package.json
-/_posts/draft1
+*.gem
+*.gemspec
+.jekyll-cache
