--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,16 @@
 #
 
 # Name of your site (displayed in the header)
-name: Deven Yantis
+name: Reverie
+
+# Name of the author
+author: Amit Merchant
 
 # Short bio or description (displayed in the header)
-description: Love sports, Enjoy programming
+description: An elegant Jekyll theme
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/49480914?s=400&u=14d102b5545be30b4723c3a139bd9e8f90ed2e95&v=4
+avatar: /images/reverie.png
 
 #
 # Flags below are optional
@@ -18,36 +21,38 @@ avatar: https://avatars2.githubusercontent.com/u/49480914?s=400&u=14d102b5545be3
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: amit.d.merchant@gmail.com
   facebook:
   flickr:
-  github: devennn
+  github: amitmerchant1990/reverie
   instagram:
-  linkedin: devenyantis
+  linkedin: 
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter:
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  rss: rss
+  twitter: amit_merchant
+  stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  playconsole:
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-43339302-11
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.amitmerchant.com/reverie
+enforce_ssl: https://www.amitmerchant.com/reverie
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/reverie"
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -73,9 +78,16 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+include: ['_pages']
+
+paginate: 6
+paginate_path: /page:num/
 
 # Exclude these files from your production _site
 exclude:
@@ -84,3 +96,4 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
