--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ _site
 .jekyll-metadata
 .bundle
 .sass-cache
-Gemfile.lock
 node_modules
 package.json
-*.gem
-*.gemspec
-.jekyll-cache
+/_posts/draft1
