--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_left    : "Deven's"
 title_right   : " blog" # default: ""
 description   : "Personal Blog"
 keywords      : "Machine Learnig, Artificial Intelligence, Malaysia, Sabah"
-url           : https://devennn.xyz/ # site url
+url           : https://devennn.github.io/ # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
